# langchain-nvidia

./: .gitignore  README.md
.github/scripts/: check_diff.py
.github/workflows/: _all_ci.yml  _compile_integration_test.yml  _lint.yml  _release.yml  _scheduled_test.yml  _test.yml  _test_release.yml  check_diffs.yml
cookbook/: langgraph_rag_agent_llama3_nvidia_nim.ipynb  nvidia_nim_agents_llama3.1.ipynb  report_maistro.ipynb  structured_report_generation  structured_report_generation.ipynb
cookbook/structured_report_generation_elastic/: setup.sh  structured_report_generation_elastic.ipynb
libs/ai-endpoints/: .pre-commit-config.yaml  Makefile  README.md  langchain_nvidia.py  pyproject.toml
libs/ai-endpoints/docs/chat/: nvidia_ai_endpoints.ipynb  nvidia_ai_endpoints_dynamo.ipynb  nvidia_ai_endpoints_inference_priority.ipynb  priority_tuning.py  queries.py
libs/ai-endpoints/docs/chat/data/: queries.py
libs/ai-endpoints/docs/llms/: nvidia_ai_endpoints.ipynb
libs/ai-endpoints/docs/providers/: nvidia.md  nvidia.mdx
libs/ai-endpoints/docs/retrievers/: nvidia_rag_retriever.ipynb  nvidia_rerank.ipynb
libs/ai-endpoints/docs/text_embedding/: nvidia_ai_endpoints.ipynb
libs/ai-endpoints/langchain_nvidia_ai_endpoints/: __init__.py  _common.py  _statics.py  _utils.py  _version.py  callbacks.py  chat_models.py  chat_models_dynamo.py  decorators.py  embeddings.py  image_gen.py  llm.py  reranking.py  retrievers.py  tools.py  utils.py
libs/ai-endpoints/langchain_nvidia_ai_endpoints/data/: _profiles.py  profile_augmentations.toml
libs/ai-endpoints/scripts/: check_pydantic.sh  test_nvcf_function.py
libs/ai-endpoints/tests/integration_tests/: conftest.py  test_api_key.py  test_available_models.py  test_base_url.py  test_bind_tools.py  test_chat_models.py  test_chat_models_dynamo.py  test_completions_models.py  test_embeddings.py  test_other_models.py  test_ranking.py  test_ranking_vlm.py  test_reasoning_content.py  test_register_model.py  test_standard.py  test_streaming.py  test_structured_output.py  test_thinking_mode.py  test_vlm_models.py
libs/ai-endpoints/tests/unit_tests/: conftest.py  test_202_polling.py  test_aliases.py  test_api_key.py  test_available_models.py  test_base_url.py  test_bind_tools.py  test_chat_models.py  test_chat_models_dynamo.py  test_chat_models_dynamo_integration.py  test_completions_models.py  test_decorators.py  test_default_headers.py  test_embeddings.py  test_imports.py  test_messages.py  test_metadata.py  test_model.py  test_parallel_tool_calls.py  test_ranking.py  test_register_model.py  test_retrievers.py  test_serialization.py  test_standard.py  test_statics.py  test_stop.py  test_structured_output.py  test_thinking_content_parsing.py  test_thinking_extraction.py  test_vlm_models.py
libs/langgraph/: Makefile  README.md  pyproject.toml
libs/langgraph/langchain_nvidia_langgraph/: __init__.py
libs/langgraph/langchain_nvidia_langgraph/adapter/: __init__.py  extractor.py  llm_detector.py  node_analyzer.py
libs/langgraph/langchain_nvidia_langgraph/analysis/: __init__.py  analyzer.py  dependency_tracker.py
libs/langgraph/langchain_nvidia_langgraph/builder/: __init__.py  builder.py
libs/langgraph/langchain_nvidia_langgraph/compile/: __init__.py  compiler.py
libs/langgraph/langchain_nvidia_langgraph/executors/: __init__.py
libs/langgraph/langchain_nvidia_langgraph/executors/speculative/: __init__.py  channel_state_manager.py  execution_loop.py  executor.py  node_executor.py  router_evaluator.py
libs/langgraph/langchain_nvidia_langgraph/graph/: __init__.py  constraints.py  state_graph.py
libs/langgraph/tests/integration_tests/: conftest.py  test_compile_modes.py  test_conditional_graphs.py  test_constraints.py  test_interrupts.py  test_snapshots.py  test_subgraphs.py  test_with_app_compile.py
libs/langgraph/tests/unit_tests/adapter/: test_extractor.py  test_llm_detector.py  test_node_analyzer.py
libs/langgraph/tests/unit_tests/analysis/: test_analyzer.py  test_dependency_tracker.py
libs/langgraph/tests/unit_tests/builder/: test_builder.py
libs/langgraph/tests/unit_tests/compile/: test_compiler.py
libs/langgraph/tests/unit_tests/executors/speculative/: test_channel_state_manager.py  test_execution_loop.py  test_executor.py  test_node_executor.py  test_router_evaluator.py
libs/langgraph/tests/unit_tests/graph/: test_constraints.py  test_state_graph.py
libs/openshell/: Makefile  README.md  pyproject.toml
libs/openshell/docs/: nvidia_openshell_sandbox.ipynb
libs/openshell/docs/providers/: nvidia.md
libs/openshell/docs/sandboxes/: example-policy.yaml  nvidia_openshell_sandbox.ipynb  openshell_0_0_57_validation_report.md  setup_openshell.sh
libs/openshell/langchain_nvidia_openshell/: __init__.py  _version.py  sandbox.py
libs/openshell/tests/integration_tests/: test_sandbox.py
libs/openshell/tests/unit_tests/: conftest.py  test_imports.py  test_notebook_demo.py  test_sandbox.py  test_setup_openshell_script.py
libs/trt/: pyproject.toml
libs/trt/docs/: llms.ipynb  trtllmapi.ipynb
libs/trt/langchain_nvidia_trt/: __init__.py  llms.py  utils.py
libs/trt/tests/integration_tests/: test_llms.py
libs/trt/tests/unit_tests/: test_llms.py
notebooks/: LangChain example, direct use.ipynb
src/ranking/: langchain.py
studio/: .env.example  agentic_rag_nvidia.py  langgraph.json  requirements.txt
tests/: test_langchain.py
