[tool.poetry]
name = "langchain-nvidia-openshell"
version = "0.1.0"
description = "NVIDIA OpenShell sandbox backend for LangChain Deep Agents"
authors = []
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain-nvidia"
license = "MIT"
packages = [
  { include = "langchain_nvidia_openshell" },
]

[tool.poetry.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-nvidia/tree/main/libs/openshell"

[tool.poetry.dependencies]
# OpenShell's SDK requires Python 3.12+; we follow that floor.
python = ">=3.12,<4.0"
deepagents = ">=0.5.0,<0.6.0"
openshell = ">=0.0.36,<0.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.3,<10.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.1"
pytest-watcher = "^0.3.4"
langchain-tests = ">=1.1.6,<2.0.0"

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.0"

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.test_integration.dependencies]

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.5"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "T201", # print
]

[tool.mypy]
disallow_untyped_defs = "True"
exclude = ["notebooks", "examples", "example_data", "docs"]

[[tool.mypy.overrides]]
# OpenShell SDK ships its own gRPC stubs; the deepagents typing surface for
# BaseSandbox is sufficient at runtime even when the deepagents package is
# not installed in the type-check environment.
module = ["openshell", "openshell.*", "deepagents", "deepagents.*", "cloudpickle"]
ignore_missing_imports = true

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
  "requires: mark tests as requiring a specific library",
  "asyncio: mark tests as requiring asyncio",
  "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
